@@ -59,7 +59,6 @@ importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,List)
 importFrom(S4Vectors,isSingleString)
 importFrom(S4Vectors,metadata)
-importFrom(S4Vectors,selfmatch)
 importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(SummarizedExperiment,assay)
 importFrom(SummarizedExperiment,rowData)
