@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/combineResults.R
+% Please edit documentation in R/combineRecomputedResults.R
 \name{combineRecomputedResults}
 \alias{combineRecomputedResults}
 \title{Combine SingleR results with recomputation}
